[css] fix: z-index inline in modals

--- a/css/digiriskdolibarr.css
+++ b/css/digiriskdolibarr.css
@@ -673,6 +673,12 @@
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
+.wpeo-modal.modal-active .modal-active {
+  z-index: 1003;
+}
+.wpeo-modal.modal-active .modal-active .modal-active {
+  z-index: 1004;
+}
 .wpeo-modal.modal-force-display .modal-close {
   display: none;
 }
@@ -3757,6 +3763,9 @@ td > .risk-evaluation-container {
   margin-left: auto;
 }
 
+.wpeo-modal.modal-photo.modal-active {
+  z-index: 2014;
+}
 .wpeo-modal.modal-photo .clickable-photo {
   border: 5px solid #fff;
   -webkit-transition: all 0.2s ease-out;
@@ -3828,11 +3837,10 @@ td > .risk-evaluation-container {
   align-items: center;
 }
 
-.risk-evaluation-add-modal .modal-container {
-  max-height: 750px;
+.risk-evaluation-add-modal .modal-active, .risk-evaluation-edit-modal .modal-active {
+  z-index: 1005;
 }
-
-.risk-evaluation-edit-modal .modal-container {
+.risk-evaluation-add-modal .modal-container, .risk-evaluation-edit-modal .modal-container {
   max-height: 750px;
 }
 
